# ipb-smart-reserve-hub

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  CONTEXT.md  Makefile  README.md  ipb_smart_reserve_hub_fresh.db  pyproject.toml  skills-lock.json
backend/: README.md  pyproject.toml  railpack.json
backend/app/: README.md
backend/app/api/: http_application.py
backend/app/dev/: README.md  bootstrap_seed.py  catalog_seed.py  reset_db.py  seed.py
backend/app/models/: __init__.py
backend/app/pdf/: __init__.py
backend/app/repositories/: audit_log_repository.py  facility_catalog_reader.py  facility_management_repository.py  notification_repository.py  reservation_repository.py  staff_reservation_operations_repository.py
backend/app/schemas/: account_schemas.py  facility_management_schemas.py  facility_schemas.py  reservation_schemas.py
backend/app/services/: accounts.py  approval_letters.py  facilities.py  facility_management.py  notifications.py  reservation_lifecycle.py  reservations.py  staff_reservation_operations.py  (+2 more)
backend/tests/: test_approval_letter_workflow.py  test_deployment_readiness.py  test_dev_bootstrap_seed.py  test_dev_catalog_seed.py  test_dev_reset_db.py  test_dev_seed.py  test_facility_browsing.py  test_http_application.py  test_notifications.py  test_pdf_generator.py  test_request_audit_logs.py  test_reservation_submission.py  test_staff_facility_management.py  test_staff_reservation_operations.py  test_student_reservation_workflow_projections.py  test_super_admin_facility_governance.py  test_super_admin_user_management.py
(+556 files in other folders)
